feat[Panama-Generator] 1,提供构建脚本实现条件编译